# envs-setup-note

./: 404.html  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
docs/: powershell.md  python.md
powershell/: index.html
python/: index.html
search/: search_index.json
stylesheets/: extra.css
