[tool.poetry]
name = "envs-setup-note"
version = "0.1.0"
description = ""
authors = ["haoC <yoshimori.1147@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "^21.7b0"
flake8 = "^3.9.2"
isort = "^5.9.3"
mkdocs-material = "^7.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
